📦 feat(build.gradle.kts): Add initial project setup with plugins, version, and repositories 📦 feat(gradlew): Add Gradle start up script for POSIX 📦 feat(gradlew.bat): Add Gradle startup script for Windows 📦 feat(build.gradle.kts): Update dependencies and plugins versions 📦 feat(gradle-wrapper.properties): Add Gradle distribution properties 📦 feat(settings.gradle.kts): Add root project and include submodule